[FIX]#60540: Possibility to move case to customer without user rights. Finding CaseType by full path

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_MoveCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_MoveCase.cshtml
@@ -28,6 +28,6 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button id="btnMoveCase" class="btn" data-dismiss="modal" aria-hidden="true">@Translation.GetCoreTextTranslation("Flytta")</button>
+    <button id="btnMoveCase" class="btn">@Translation.GetCoreTextTranslation("Flytta")</button>
     <button class="btn" data-dismiss="modal" aria-hidden="true">@Translation.GetCoreTextTranslation("Avbryt")</button>
 </div>
